; ModuleID = '/home/carl/AnghaBench/libgit2/tests/status/extr_worktree.c_test_status_worktree__simple_delete.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/status/extr_worktree.c_test_status_worktree__simple_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [8 x i8] c"renames\00", align 1
@GIT_STATUS_OPTIONS_INIT = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@GIT_STATUS_OPT_INCLUDE_UNTRACKED = common dso_local global i32 0, align 4
@GIT_STATUS_OPT_DISABLE_PATHSPEC_MATCH = common dso_local global i32 0, align 4
@GIT_STATUS_OPT_EXCLUDE_SUBMODULES = common dso_local global i32 0, align 4
@GIT_STATUS_OPT_RECURSE_UNTRACKED_DIRS = common dso_local global i32 0, align 4
@cb_status__count = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [21 x i8] c"renames/untimely.txt\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_status_worktree__simple_delete() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.TYPE_4__, align 4
  %3 = alloca i32, align 4
  %4 = call i32* @cl_git_sandbox_init(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i32* %4, i32** %1, align 8
  %5 = bitcast %struct.TYPE_4__* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %5, i8* align 4 bitcast (%struct.TYPE_4__* @GIT_STATUS_OPTIONS_INIT to i8*), i64 4, i1 false)
  %6 = load i32, i32* @GIT_STATUS_OPT_INCLUDE_UNTRACKED, align 4
  %7 = load i32, i32* @GIT_STATUS_OPT_DISABLE_PATHSPEC_MATCH, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @GIT_STATUS_OPT_EXCLUDE_SUBMODULES, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @GIT_STATUS_OPT_RECURSE_UNTRACKED_DIRS, align 4
  %12 = or i32 %10, %11
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i32 %12, i32* %13, align 4
  store i32 0, i32* %3, align 4
  %14 = load i32*, i32** %1, align 8
  %15 = load i32, i32* @cb_status__count, align 4
  %16 = call i32 @git_status_foreach_ext(i32* %14, %struct.TYPE_4__* %2, i32 %15, i32* %3)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @cl_assert_equal_i(i32 0, i32 %18)
  %20 = call i32 @p_unlink(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  %21 = call i32 @cl_must_pass(i32 %20)
  store i32 0, i32* %3, align 4
  %22 = load i32*, i32** %1, align 8
  %23 = load i32, i32* @cb_status__count, align 4
  %24 = call i32 @git_status_foreach_ext(i32* %22, %struct.TYPE_4__* %2, i32 %23, i32* %3)
  %25 = call i32 @cl_git_pass(i32 %24)
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @cl_assert_equal_i(i32 1, i32 %26)
  ret void
}

declare dso_local i32* @cl_git_sandbox_init(i8*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_status_foreach_ext(i32*, %struct.TYPE_4__*, i32, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @cl_must_pass(i32) #1

declare dso_local i32 @p_unlink(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
